--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ pinecone==6.0.1
 pinecone-plugin-interface==0.0.7
 pinecone_haystack==4.0.0
 streamlit >=1.22
-install nltk>=3.9.1
+nltk>=3.9.1
 pymupdf
 pillow
